--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/MIX.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/MIX.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous"> -->
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta
       name="description"
       content="This website design by Nguyễn Công Hội :)"
     />
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -28,6 +28,45 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>MIX Clothes</title>
+    <style>
+      /* .container {
+        margin-top: 100px
+      } */
+
+      .counter-box {
+        background: #f6f6f6;
+        padding: 40px 20px 37px;
+        text-align: center
+      }
+
+      .counter-box p {
+        margin: 5px 0 0;
+        padding: 0;
+        color: #909090;
+        font-size: 18px;
+        font-weight: 500
+      }
+
+      .counter {
+        font-size: 32px;
+        font-weight: 700;
+        color: #666;
+        line-height: 28px
+      }
+      .counter{
+        border-radius: 20px;
+      }
+
+      .colored:hover {
+        background: #3acf87;
+        border-radius: 15px;
+        color: white;
+      }
+      .four{
+        color: white;
+        border-radius: 20px;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
